tests/sumo/basic/tls/NEMA/errors/1_ignore/output.sumo
Loading net-file from 'net.net.xml' ... done (5ms).
Loading additional-files from 'input_additional.add.xml' ... 
done (1ms).
Loading additional-files from 'input_additional2.add.xml' ... done (2ms).
Loading done.
Simulation version v1_11_0+1352-02e61c8 started with time: 0.00
Simulation ended at time: 500.00
Reason: The final simulation step has been reached.
Performance: 
 Duration: 0.58s
 Real time factor: 868.056
 UPS: 46250.000000
Vehicles: 
 Inserted: 422 (Loaded: 423)
 Running: 72
 Waiting: 1
Statistics (avg):
 RouteLength: 362.34
 Speed: 7.67
 Duration: 62.78
 WaitingTime: 25.89
 TimeLoss: 43.82
 DepartDelay: 0.97

